<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="PositionTriggerStats_typ" Id="{3435d90b-ae4f-0926-0416-9bd587994dc5}">
    <Declaration><![CDATA[TYPE PositionTriggerStats_typ :
STRUCT
	
	InterarrivalTime			: TIME;		// Current amount of time between mover events
	LatestMoverVelocity			: LREAL;	// Mover velocity of the most-recent trigger event
	
	InterarrivalTimeHistory		: ARRAY[0..63] OF TIME;		// Ring buffer of recent interarrival times
	MoverVelocityHistory		: ARRAY[0..63] OF LREAL;	// Ring buffer of recent mover velocities
	
	AverageInterarrivalTime		: TIME;		// Average of all nonzero Interarrival times in the ring buffer
	AverageMoverVelocity		: LREAL;	// Average of all nonzero mover velocities in the ring buffer	
	AverageMoversPerMinute		: LREAL;

	ProcessedMoverCount			: UDINT;	// Total number of movers processed by this position trigger
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>