<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TrackInfo" Id="{e1df8d7d-bb5e-01fd-14ad-401c12b84a9f}">
    <Declaration><![CDATA[TYPE TrackInfo :
STRUCT
	TrackId 				: OTCID;	// hardware id of mover's track read back from MC_ReadTrackPositions
	PartId 					: OTCID;	// hardware id of mover's part read back from MC_ReadTrackPositions
	TrackPosition 			: LREAL;	// track position read back from MC_ReadTrackPositions
	PartPosition			: LREAL;	// part position read back from MC_ReadTrackPositions
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>